kustomize/overlays/dev/ecfront/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc
  annotations:
    cloud.google.com/backend-config: '{"default": "dev-ecfront-backendconfig"}'
